Bug 1203404.  offsetX/Y on mouse events should remain target-relative, instead of becoming page-relative, after event dispatch is done.  r=roc